--- a/biochar.html
+++ b/biochar.html
@@ -3,51 +3,86 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Biochar: A Soil Supercharger for Farmers</title>
-<meta name="description" content="Learn about biochar and its positive impact on agriculture.">
+<title>The Biochar Revolution: From Waste to Black Gold for Farmers</title>
+<meta name="description" content="Discover how biochar is transforming agriculture, boosting crop yields, and fighting climate change.">
 <link rel="stylesheet" href="style.css?v=1.3">
+<style>
+body {
+font-family: 'Georgia', serif;
+line-height: 1.6;
+color: #333;
+}
+.container {
+max-width: 800px;
+margin: 0 auto;
+padding: 2rem;
+}
+h1, h2 {
+font-family: 'Helvetica Neue', sans-serif;
+font-weight: bold;
+}
+.intro-text {
+font-style: italic;
+color: #555;
+font-size: 1.1rem;
+}
+.author-info {
+display: flex;
+align-items: center;
+margin-bottom: 2rem;
+}
+.author-info img {
+border-radius: 50%;
+margin-right: 1rem;
+width: 50px;
+height: 50px;
+}
+.author-info span {
+font-weight: bold;
+}
+.main-image {
+width: 100%;
+height: auto;
+margin-bottom: 2rem;
+border-radius: 8px;
+}
+</style>
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMBLL8PMNQ"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'G-YMBLL8PMNQ');
-</script>
 <body>
-<div id="header-placeholder"></div>
 code
 Code
 <main class="page-content">
     <div class="container">
-        <h1>Biochar: A Soil Supercharger for Farmers</h1>
+        <h1>The Biochar Revolution: From Waste to Black Gold for Farmers</h1>
+        <div class="author-info">
+            <img src="https://via.placeholder.com/50" alt="Author Photo">
+            <span>By Jane Doe | Published on September 29, 2025</span>
+        </div>
+        <img src="https://via.placeholder.com/800x400" alt="Biochar in soil" class="main-image">
 
-        <p><strong>Biochar</strong> is a charcoal-like substance that is changing the face of modern agriculture. Produced from organic waste materials through a process called pyrolysis, this powerful soil amendment offers a wealth of benefits for farmers, including boosting soil fertility and increasing water and nutrient retention. By integrating biochar into their practices, farmers can improve crop yields, reduce their reliance on chemical fertilizers, and contribute to a more sustainable agricultural future.</p>
+        <p class="intro-text">In the quest for a more sustainable and resilient agricultural future, an ancient practice is making a powerful comeback. Biochar, a charcoal-like substance, is proving to be a game-changer for farmers worldwide. By turning agricultural waste into a potent soil amendment, biochar is not only boosting crop yields but also playing a crucial role in the fight against climate change.</p>
 
-        <h1>🌍 A Solution Rooted in Sustainable Practices</h1>
-        <p>Biochar is created by heating biomass, such as agricultural waste, wood debris, or manure, in a low-oxygen environment. This process, known as pyrolysis, transforms the waste into a stable, carbon-rich material. Not only does this process prevent the release of greenhouse gases that would otherwise be emitted during decomposition, but it also creates a valuable product from materials that would typically be discarded.</p>
+        <h2>🌍 What Exactly is Biochar?</h2>
+        <p>Biochar is created by heating organic materials like wood chips, crop residues, and manure in a low-oxygen environment, a process called pyrolysis. This transforms the biomass into a stable, carbon-rich material that can be added to the soil. Unlike regular charcoal used for fuel, biochar is specifically produced to improve soil health and sequester carbon. This process essentially locks up carbon that would otherwise be released into the atmosphere, making it a carbon-negative technology.</p>
 
-        <h1>🌱 How Biochar Transforms Soil Health</h1>
-        <p>The porous nature of biochar makes it incredibly effective at retaining water and nutrients in the soil, which is especially beneficial in drought-prone areas. It also improves soil structure, aeration, and promotes the growth of beneficial microorganisms. Furthermore, biochar can help to balance soil pH, making it a valuable tool for farmers dealing with overly acidic or alkaline conditions.</p>
+        <h2>🌱 Supercharging the Soil for a Bountiful Harvest</h2>
+        <p>The magic of biochar lies in its porous structure. This structure acts like a sponge, significantly improving the soil's ability to retain water and essential nutrients. This is a massive advantage for farmers, especially in regions prone to drought. Healthier soil structure also means better aeration for plant roots to thrive.</p>
+        <p>Furthermore, biochar can help balance soil pH, making nutrients more accessible to plants. It also provides a fantastic habitat for beneficial microorganisms that are vital for a healthy soil ecosystem. The result? Stronger, healthier plants and, ultimately, more abundant harvests.</p>
 
-        <h1>👩‍🌾 Empowering Farmers for a Better Harvest</h1>
-        <p>For farmers, the use of biochar can lead to significant improvements in crop yields and overall productivity. By enhancing soil fertility and nutrient availability, biochar helps plants grow stronger and healthier, resulting in more abundant harvests. The increased water retention also means less reliance on irrigation, saving both water and money.</p>
+        <h2>👩‍🌾 A Farmer's Best Friend: Boosting Livelihoods and Resilience</h2>
+        <p>For farmers, the benefits of biochar translate directly to their bottom line. Increased crop yields mean more income and greater food security. By improving soil health, biochar reduces the need for expensive chemical fertilizers, leading to significant cost savings. Its water-retention properties can also lessen the reliance on irrigation, a critical factor in water-scarce areas.</p>
+        <p>By adopting biochar, farmers can build more resilient agricultural systems that are better equipped to handle the challenges of a changing climate, such as droughts and heavy rainfall.</p>
 
-        <h1>🔄 Driving Sustainability & Positive Impact</h1>
-        <p>The use of biochar in agriculture aligns perfectly with the principles of a circular economy by turning waste into a valuable resource. Its application supports:</p>
+        <h2>🔄 A Win for the Planet: The Circular Economy in Action</h2>
+        <p>The production and use of biochar perfectly embody the principles of a circular economy by transforming waste into a valuable resource. This sustainable practice offers a multitude of environmental benefits:</p>
         <ul>
-            <li>Long-term carbon sequestration in the soil, helping to combat climate change.</li>
-            <li>Reduced need for synthetic fertilizers, which can harm the environment.</li>
-            <li>Enhanced soil health and resilience for future generations.</li>
-            <li>Increased agricultural productivity and food security.</li>
+            <li><strong>Climate Change Mitigation:</strong> By sequestering carbon in the soil for hundreds or even thousands of years, biochar actively removes CO2 from the atmosphere. It can also reduce emissions of other potent greenhouse gases like nitrous oxide from fertilizers.</li>
+            <li><strong>Waste Reduction:</strong> Agricultural and forestry waste that might otherwise be burned or left to decompose is converted into a valuable product.</li>
+            <li><strong>Reduced Pollution:</strong> By retaining nutrients, biochar helps prevent fertilizer runoff into waterways, protecting our aquatic ecosystems.</li>
         </ul>
 
-        <p>By adopting biochar, farmers can not only improve their own operations but also play a crucial role in building a more sustainable and resilient food system for everyone.</p>
+        <p>Biochar represents a powerful, accessible, and sustainable solution for some of the most pressing challenges facing modern agriculture. By enriching our soils and sequestering carbon, this "black gold" is paving the way for a healthier planet and more prosperous lives for farmers everywhere.</p>
     </div>
 </main>
-
-<div id="footer-placeholder"></div>
-<script src="script.js" defer></script>
 </body>
 </html>
