--- a/biochar.html
+++ b/biochar.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>The Biochar Revolution: From Waste to Black Gold for Farmers</title>
+<meta name="description" content="Discover how biochar is transforming agriculture, boosting crop yields, and fighting climate change.">
+<!-- Google Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
+code
+Code
 <link rel="stylesheet" href="style.css?v=1.3">
 <style>
     /* Modern Blog Styling */
@@ -15,6 +28,11 @@
         line-height: 1.7;
         color: var(--text-color);
         background-color: var(--background-light);
+    }
+    
+    /* Ensure page-content has some padding if the container is removed */
+    .page-content {
+        padding: 1rem 0;
     }
 
     .container {
@@ -111,6 +129,7 @@
 </style>
 </head>
 <body>
+<div id="header-placeholder"></div>
 code
 Code
 <main class="page-content">
@@ -146,5 +165,8 @@ Code
         <p>Biochar represents a powerful, accessible, and sustainable solution for the most pressing challenges facing modern agriculture. By enriching our soils and sequestering carbon, this "black gold" is paving the way for a healthier planet and more prosperous lives for farmers everywhere.</p>
     </div>
 </main>
+
+<div id="footer-placeholder"></div>
+<script src="script.js" defer></script>
 </body>
 </html>
