--- a/biochar.html
+++ b/biochar.html
@@ -3,166 +3,47 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>The Biochar Revolution: From Waste to Black Gold for Farmers</title>
-<meta name="description" content="Discover how biochar is transforming agriculture, boosting crop yields, and fighting climate change.">
-<!-- Google Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
-code
-Code
+<title>Biochar: A Soil Supercharger for Farmers</title>
+<meta name="description" content="Learn about biochar and its positive impact on agriculture.">
 <link rel="stylesheet" href="style.css?v=1.3">
-<style>
-    /* Modern Blog Styling */
-    :root {
-        --primary-color: #27ae60; /* Earthy Green */
-        --text-color: #343a40;
-        --heading-color: #2c3e50;
-        --background-light: #f8f9fa;
-        --white: #ffffff;
-        --border-color: #e9ecef;
-    }
-
-    body {
-        font-family: 'Open Sans', sans-serif;
-        line-height: 1.7;
-        color: var(--text-color);
-        background-color: var(--background-light);
-    }
-    
-    /* Ensure page-content has some padding if the container is removed */
-    .page-content {
-        padding: 1rem 0;
-    }
-
-    .container {
-        max-width: 800px;
-        margin: 2rem auto;
-        padding: 2rem 3rem;
-        background-color: var(--white);
-        border-radius: 12px;
-        box-shadow: 0 4px 15px rgba(0,0,0,0.05);
-    }
-
-    h1, h2 {
-        font-family: 'Montserrat', sans-serif;
-        color: var(--heading-color);
-        line-height: 1.3;
-    }
-
-    h1 {
-        font-size: 2.5rem;
-        margin-bottom: 1rem;
-        text-align: center;
-    }
-
-    h2 {
-        font-size: 1.8rem;
-        margin-top: 2.5rem;
-        margin-bottom: 1rem;
-        padding-bottom: 0.5rem;
-        border-bottom: 3px solid var(--primary-color);
-    }
-
-    .intro-text {
-        font-style: normal;
-        font-size: 1.15rem;
-        color: #555;
-        background-color: #f8f9fa;
-        padding: 1.5rem;
-        border-left: 5px solid var(--primary-color);
-        border-radius: 0 8px 8px 0;
-        margin: 2rem 0;
-    }
-
-    .author-info {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 2rem;
-        color: #6c757d;
-        font-size: 0.9rem;
-    }
-
-    .author-info img {
-        border-radius: 50%;
-        margin-right: 1rem;
-        width: 45px;
-        height: 45px;
-    }
-
-    .author-info span {
-        font-weight: 600;
-    }
-    
-    .main-image {
-        width: 100%;
-        height: auto;
-        margin-bottom: 2rem;
-        border-radius: 12px;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-
-    p {
-        margin-bottom: 1.25rem;
-    }
-
-    ul {
-        list-style: none;
-        padding-left: 0;
-    }
-
-    ul li {
-        padding-left: 1.5rem;
-        position: relative;
-        margin-bottom: 0.75rem;
-    }
-
-    ul li::before {
-        content: '✔';
-        position: absolute;
-        left: 0;
-        color: var(--primary-color);
-        font-weight: bold;
-    }
-
-</style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMBLL8PMNQ"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-YMBLL8PMNQ');
+</script>
 <body>
 <div id="header-placeholder"></div>
 code
 Code
 <main class="page-content">
     <div class="container">
-        <h1>The Biochar Revolution: From Waste to Black Gold for Farmers</h1>
-        <div class="author-info">
-            <img src="https://via.placeholder.com/50/27ae60/ffffff?text=JD" alt="Author Jane Doe">
-            <span>By Jane Doe | Published: September 29, 2025</span>
-        </div>
-        <img src="https://via.placeholder.com/800x400" alt="A close-up of rich, dark soil amended with biochar" class="main-image">
+        <h1>Biochar: A Soil Supercharger for Farmers</h1>
 
-        <p class="intro-text">In the quest for a more sustainable and resilient agricultural future, an ancient practice is making a powerful comeback. Biochar is proving to be a game-changer for farmers worldwide, turning agricultural waste into a potent soil amendment that boosts crop yields and plays a crucial role in the fight against climate change.</p>
+        <p><strong>Biochar</strong> is a charcoal-like substance that is changing the face of modern agriculture. Produced from organic waste materials through a process called pyrolysis, this powerful soil amendment offers a wealth of benefits for farmers, including boosting soil fertility and increasing water and nutrient retention. By integrating biochar into their practices, farmers can improve crop yields, reduce their reliance on chemical fertilizers, and contribute to a more sustainable agricultural future.</p>
 
-        <h2>🌍 What Exactly is Biochar?</h2>
-        <p>Biochar is created by heating organic materials like wood chips, crop residues, and manure in a low-oxygen environment—a process called pyrolysis. This transforms the biomass into a stable, carbon-rich material. Unlike regular charcoal used for fuel, biochar is specifically produced to improve soil health and sequester carbon. This process essentially locks up carbon that would otherwise be released into the atmosphere, making it a carbon-negative technology.</p>
+        <h1>🌍 A Solution Rooted in Sustainable Practices</h1>
+        <p>Biochar is created by heating biomass, such as agricultural waste, wood debris, or manure, in a low-oxygen environment. This process, known as pyrolysis, transforms the waste into a stable, carbon-rich material. Not only does this process prevent the release of greenhouse gases that would otherwise be emitted during decomposition, but it also creates a valuable product from materials that would typically be discarded.</p>
 
-        <h2>🌱 Supercharging the Soil for a Bountiful Harvest</h2>
-        <p>The magic of biochar lies in its incredibly porous structure, which acts like a sponge, significantly improving the soil's ability to retain water and essential nutrients. This is a massive advantage for farmers, especially in regions prone to drought. Healthier soil structure also means better aeration for plant roots to thrive.</p>
-        <p>Furthermore, biochar can help balance soil pH, making nutrients more accessible to plants. It also provides a fantastic habitat for beneficial microorganisms that are vital for a healthy soil ecosystem. The result? Stronger, healthier plants and, ultimately, more abundant harvests.</p>
+        <h1>🌱 How Biochar Transforms Soil Health</h1>
+        <p>The porous nature of biochar makes it incredibly effective at retaining water and nutrients in the soil, which is especially beneficial in drought-prone areas. It also improves soil structure, aeration, and promotes the growth of beneficial microorganisms. Furthermore, biochar can help to balance soil pH, making it a valuable tool for farmers dealing with overly acidic or alkaline conditions.</p>
 
-        <h2>👩‍🌾 A Farmer's Best Friend: Boosting Livelihoods</h2>
-        <p>For farmers, the benefits of biochar translate directly to their bottom line. Increased crop yields mean more income and greater food security. By improving soil health, biochar reduces the need for expensive chemical fertilizers, leading to significant cost savings. Its water-retention properties can also lessen the reliance on irrigation, a critical factor in water-scarce areas.</p>
-        <p>By adopting biochar, farmers can build more resilient agricultural systems that are better equipped to handle the challenges of a changing climate, such as droughts and heavy rainfall.</p>
+        <h1>👩‍🌾 Empowering Farmers for a Better Harvest</h1>
+        <p>For farmers, the use of biochar can lead to significant improvements in crop yields and overall productivity. By enhancing soil fertility and nutrient availability, biochar helps plants grow stronger and healthier, resulting in more abundant harvests. The increased water retention also means less reliance on irrigation, saving both water and money.</p>
 
-        <h2>🔄 A Win for the Planet: The Circular Economy in Action</h2>
-        <p>The production and use of biochar perfectly embody the principles of a circular economy by transforming waste into a valuable resource. This sustainable practice offers a multitude of environmental benefits:</p>
+        <h1>🔄 Driving Sustainability & Positive Impact</h1>
+        <p>The use of biochar in agriculture aligns perfectly with the principles of a circular economy by turning waste into a valuable resource. Its application supports:</p>
         <ul>
-            <li><strong>Climate Change Mitigation:</strong> By sequestering carbon in the soil for hundreds of years, biochar actively removes CO2 from the atmosphere and can reduce emissions of other potent greenhouse gases.</li>
-            <li><strong>Waste Reduction:</strong> Agricultural and forestry waste that might otherwise be burned or left to decompose is converted into a valuable product.</li>
-            <li><strong>Reduced Pollution:</strong> By retaining nutrients, biochar helps prevent fertilizer runoff into waterways, protecting our aquatic ecosystems.</li>
+            <li>Long-term carbon sequestration in the soil, helping to combat climate change.</li>
+            <li>Reduced need for synthetic fertilizers, which can harm the environment.</li>
+            <li>Enhanced soil health and resilience for future generations.</li>
+            <li>Increased agricultural productivity and food security.</li>
         </ul>
 
-        <p>Biochar represents a powerful, accessible, and sustainable solution for the most pressing challenges facing modern agriculture. By enriching our soils and sequestering carbon, this "black gold" is paving the way for a healthier planet and more prosperous lives for farmers everywhere.</p>
+        <p>By adopting biochar, farmers can not only improve their own operations but also play a crucial role in building a more sustainable and resilient food system for everyone.</p>
     </div>
 </main>
 
