--- a/biochar.html
+++ b/biochar.html
@@ -1,53 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Biochar: A Soil Supercharger for Farmers</title>
-<meta name="description" content="Learn about biochar and its positive impact on agriculture.">
-<link rel="stylesheet" href="style.css?v=1.3">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Biochar: A Soil Supercharger for Farmers</title>
+    <meta name="description" content="Learn about biochar and its positive impact on agriculture.">
+    <link rel="stylesheet" href="style.css?v=1.3">
+
+    <!-- Google Fonts for a professional look -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+
+    <style>
+        /* Professional Styling Enhancements */
+        body {
+            font-family: 'Open Sans', sans-serif;
+            line-height: 1.7;
+            background-color: #f4f4f9; /* A light, neutral background */
+            color: #333;
+        }
+
+        .container {
+            max-width: 850px;
+            margin: 2rem auto;
+            padding: 2rem 3rem;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+        }
+
+        /* Main Title Styling */
+        h1 {
+            font-family: 'Montserrat', sans-serif;
+            text-align: center;
+            font-size: 2.8rem;
+            color: #2c3e50;
+            margin-bottom: 2rem;
+        }
+        
+        /* Section Heading Styling */
+        h2 {
+            font-family: 'Montserrat', sans-serif;
+            font-size: 1.7rem;
+            color: #34495e;
+            margin-top: 2.5rem;
+            margin-bottom: 1rem;
+            padding-bottom: 0.5rem;
+            border-bottom: 3px solid #2ecc71; /* Accent color for emphasis */
+        }
+
+        p {
+            font-size: 1.1rem;
+            margin-bottom: 1.25rem;
+        }
+
+        strong {
+            font-weight: 600;
+            color: #2c3e50;
+        }
+        
+        ul {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        ul li {
+            font-size: 1.1rem;
+            padding-left: 1.8rem;
+            position: relative;
+            margin-bottom: 0.75rem;
+        }
+
+        ul li::before {
+            content: '🌿'; /* Thematic emoji as a bullet point */
+            position: absolute;
+            left: 0;
+            font-size: 1.2rem;
+            top: -2px;
+        }
+    </style>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YMBLL8PMNQ"></script>
 <script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'G-YMBLL8PMNQ');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-YMBLL8PMNQ');
 </script>
 <body>
-<div id="header-placeholder"></div>
-code
-Code
-<main class="page-content">
-    <div class="container">
-        <h1>Biochar: A Soil Supercharger for Farmers</h1>
+    <div id="header-placeholder"></div>
 
-        <p><strong>Biochar</strong> is a charcoal-like substance that is changing the face of modern agriculture. Produced from organic waste materials through a process called pyrolysis, this powerful soil amendment offers a wealth of benefits for farmers, including boosting soil fertility and increasing water and nutrient retention. By integrating biochar into their practices, farmers can improve crop yields, reduce their reliance on chemical fertilizers, and contribute to a more sustainable agricultural future.</p>
+    <main class="page-content">
+        <div class="container">
+            <h1>Biochar: A Soil Supercharger for Farmers</h1>
 
-        <h1>🌍 A Solution Rooted in Sustainable Practices</h1>
-        <p>Biochar is created by heating biomass, such as agricultural waste, wood debris, or manure, in a low-oxygen environment. This process, known as pyrolysis, transforms the waste into a stable, carbon-rich material. Not only does this process prevent the release of greenhouse gases that would otherwise be emitted during decomposition, but it also creates a valuable product from materials that would typically be discarded.</p>
+            <p><strong>Biochar</strong> is a charcoal-like substance that is changing the face of modern agriculture. Produced from organic waste materials through a process called pyrolysis, this powerful soil amendment offers a wealth of benefits for farmers, including boosting soil fertility and increasing water and nutrient retention. By integrating biochar into their practices, farmers can improve crop yields, reduce their reliance on chemical fertilizers, and contribute to a more sustainable agricultural future.</p>
 
-        <h1>🌱 How Biochar Transforms Soil Health</h1>
-        <p>The porous nature of biochar makes it incredibly effective at retaining water and nutrients in the soil, which is especially beneficial in drought-prone areas. It also improves soil structure, aeration, and promotes the growth of beneficial microorganisms. Furthermore, biochar can help to balance soil pH, making it a valuable tool for farmers dealing with overly acidic or alkaline conditions.</p>
+            <h2>🌍 A Solution Rooted in Sustainable Practices</h2>
+            <p>Biochar is created by heating biomass, such as agricultural waste, wood debris, or manure, in a low-oxygen environment. This process, known as pyrolysis, transforms the waste into a stable, carbon-rich material. Not only does this process prevent the release of greenhouse gases that would otherwise be emitted during decomposition, but it also creates a valuable product from materials that would typically be discarded.</p>
 
-        <h1>👩‍🌾 Empowering Farmers for a Better Harvest</h1>
-        <p>For farmers, the use of biochar can lead to significant improvements in crop yields and overall productivity. By enhancing soil fertility and nutrient availability, biochar helps plants grow stronger and healthier, resulting in more abundant harvests. The increased water retention also means less reliance on irrigation, saving both water and money.</p>
+            <h2>🌱 How Biochar Transforms Soil Health</h2>
+            <p>The porous nature of biochar makes it incredibly effective at retaining water and nutrients in the soil, which is especially beneficial in drought-prone areas. It also improves soil structure, aeration, and promotes the growth of beneficial microorganisms. Furthermore, biochar can help to balance soil pH, making it a valuable tool for farmers dealing with overly acidic or alkaline conditions.</p>
 
-        <h1>🔄 Driving Sustainability & Positive Impact</h1>
-        <p>The use of biochar in agriculture aligns perfectly with the principles of a circular economy by turning waste into a valuable resource. Its application supports:</p>
-        <ul>
-            <li>Long-term carbon sequestration in the soil, helping to combat climate change.</li>
-            <li>Reduced need for synthetic fertilizers, which can harm the environment.</li>
-            <li>Enhanced soil health and resilience for future generations.</li>
-            <li>Increased agricultural productivity and food security.</li>
-        </ul>
+            <h2>👩‍🌾 Empowering Farmers for a Better Harvest</h2>
+            <p>For farmers, the use of biochar can lead to significant improvements in crop yields and overall productivity. By enhancing soil fertility and nutrient availability, biochar helps plants grow stronger and healthier, resulting in more abundant harvests. The increased water retention also means less reliance on irrigation, saving both water and money.</p>
 
-        <p>By adopting biochar, farmers can not only improve their own operations but also play a crucial role in building a more sustainable and resilient food system for everyone.</p>
-    </div>
-</main>
+            <h2>🔄 Driving Sustainability & Positive Impact</h2>
+            <p>The use of biochar in agriculture aligns perfectly with the principles of a circular economy by turning waste into a valuable resource. Its application supports:</p>
+            <ul>
+                <li>Long-term carbon sequestration in the soil, helping to combat climate change.</li>
+                <li>Reduced need for synthetic fertilizers, which can harm the environment.</li>
+                <li>Enhanced soil health and resilience for future generations.</li>
+                <li>Increased agricultural productivity and food security.</li>
+            </ul>
 
-<div id="footer-placeholder"></div>
-<script src="script.js" defer></script>
+            <p>By adopting biochar, farmers can not only improve their own operations but also play a crucial role in building a more sustainable and resilient food system for everyone.</p>
+        </div>
+    </main>
+
+    <div id="footer-placeholder"></div>
+    <script src="script.js" defer></script>
 </body>
 </html>
