--- a/biochar.html
+++ b/biochar.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
     <style>
-        /* Professional Styling Enhancements */
+        /* Professional Styling for Main Content Only */
         body {
             font-family: 'Open Sans', sans-serif;
             line-height: 1.7;
