--- a/biochar.html
+++ b/biochar.html
@@ -6,7 +6,72 @@
 <title>Biochar: A Soil Supercharger for Farmers</title>
 <meta name="description" content="Learn about biochar and its positive impact on agriculture.">
 <link rel="stylesheet" href="style.css?v=1.3">
+
+<style>
+/* --- Blog Professional Styling --- */
+
+/* Container */
+.container {
+  max-width: 850px;
+  margin: 0 auto;
+  padding: 2rem 1rem;
+  font-family: "Segoe UI", Roboto, sans-serif;
+  color: #444;
+  line-height: 1.6;
+}
+
+/* Headings */
+main h1 {
+  font-size: 2rem;          
+  font-weight: 700;
+  margin-bottom: 1rem;
+  line-height: 1.3;
+  color: #2c3e50;
+}
+
+main h1:not(:first-of-type) {
+  font-size: 1.5rem;        
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  color: #34495e;
+  border-left: 4px solid #27ae60;
+  padding-left: 0.75rem;
+}
+
+/* Paragraphs */
+main p {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+/* Lists */
+main ul {
+  list-style: none;
+  padding-left: 0;
+  margin: 1rem 0;
+}
+
+main ul li {
+  position: relative;
+  padding-left: 1.5rem;
+  margin-bottom: 0.75rem;
+}
+
+main ul li::before {
+  content: "✔";
+  position: absolute;
+  left: 0;
+  color: #27ae60;
+  font-weight: bold;
+}
+
+/* Better spacing */
+.page-content {
+  background: #fdfdfd;
+}
+</style>
 </head>
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YMBLL8PMNQ"></script>
 <script>
@@ -15,10 +80,10 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'G-YMBLL8PMNQ');
 </script>
+
 <body>
 <div id="header-placeholder"></div>
-code
-Code
+
 <main class="page-content">
     <div class="container">
         <h1>Biochar: A Soil Supercharger for Farmers</h1>
