--- a/biochar.html
+++ b/biochar.html
@@ -6,70 +6,6 @@
 <title>Biochar: A Soil Supercharger for Farmers</title>
 <meta name="description" content="Learn about biochar and its positive impact on agriculture.">
 <link rel="stylesheet" href="style.css?v=1.3">
-
-<style>
-/* --- Blog Professional Styling --- */
-
-/* Container */
-.container {
-  max-width: 850px;
-  margin: 0 auto;
-  padding: 2rem 1rem;
-  font-family: "Segoe UI", Roboto, sans-serif;
-  color: #444;
-  line-height: 1.6;
-}
-
-/* Headings */
-main h1 {
-  font-size: 2rem;          
-  font-weight: 700;
-  margin-bottom: 1rem;
-  line-height: 1.3;
-  color: #2c3e50;
-}
-
-main h1:not(:first-of-type) {
-  font-size: 1.5rem;        
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-  color: #34495e;
-  border-left: 4px solid #27ae60;
-  padding-left: 0.75rem;
-}
-
-/* Paragraphs */
-main p {
-  font-size: 1rem;
-  margin-bottom: 1rem;
-}
-
-/* Lists */
-main ul {
-  list-style: none;
-  padding-left: 0;
-  margin: 1rem 0;
-}
-
-main ul li {
-  position: relative;
-  padding-left: 1.5rem;
-  margin-bottom: 0.75rem;
-}
-
-main ul li::before {
-  content: "✔";
-  position: absolute;
-  left: 0;
-  color: #27ae60;
-  font-weight: bold;
-}
-
-/* Better spacing */
-.page-content {
-  background: #fdfdfd;
-}
-</style>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -86,27 +22,15 @@ gtag('config', 'G-YMBLL8PMNQ');
 
 <main class="page-content">
     <div class="container">
-        <h1>Biochar: A Soil Supercharger for Farmers</h1>
-
         <p><strong>Biochar</strong> is a charcoal-like substance that is changing the face of modern agriculture. Produced from organic waste materials through a process called pyrolysis, this powerful soil amendment offers a wealth of benefits for farmers, including boosting soil fertility and increasing water and nutrient retention. By integrating biochar into their practices, farmers can improve crop yields, reduce their reliance on chemical fertilizers, and contribute to a more sustainable agricultural future.</p>
 
-        <h1>🌍 A Solution Rooted in Sustainable Practices</h1>
         <p>Biochar is created by heating biomass, such as agricultural waste, wood debris, or manure, in a low-oxygen environment. This process, known as pyrolysis, transforms the waste into a stable, carbon-rich material. Not only does this process prevent the release of greenhouse gases that would otherwise be emitted during decomposition, but it also creates a valuable product from materials that would typically be discarded.</p>
 
-        <h1>🌱 How Biochar Transforms Soil Health</h1>
         <p>The porous nature of biochar makes it incredibly effective at retaining water and nutrients in the soil, which is especially beneficial in drought-prone areas. It also improves soil structure, aeration, and promotes the growth of beneficial microorganisms. Furthermore, biochar can help to balance soil pH, making it a valuable tool for farmers dealing with overly acidic or alkaline conditions.</p>
 
-        <h1>👩‍🌾 Empowering Farmers for a Better Harvest</h1>
         <p>For farmers, the use of biochar can lead to significant improvements in crop yields and overall productivity. By enhancing soil fertility and nutrient availability, biochar helps plants grow stronger and healthier, resulting in more abundant harvests. The increased water retention also means less reliance on irrigation, saving both water and money.</p>
 
-        <h1>🔄 Driving Sustainability & Positive Impact</h1>
-        <p>The use of biochar in agriculture aligns perfectly with the principles of a circular economy by turning waste into a valuable resource. Its application supports:</p>
-        <ul>
-            <li>Long-term carbon sequestration in the soil, helping to combat climate change.</li>
-            <li>Reduced need for synthetic fertilizers, which can harm the environment.</li>
-            <li>Enhanced soil health and resilience for future generations.</li>
-            <li>Increased agricultural productivity and food security.</li>
-        </ul>
+        <p>The use of biochar in agriculture aligns perfectly with the principles of a circular economy by turning waste into a valuable resource. Its application supports long-term carbon sequestration in the soil, helping to combat climate change, reduces the need for synthetic fertilizers, enhances soil health and resilience for future generations, and increases agricultural productivity and food security.</p>
 
         <p>By adopting biochar, farmers can not only improve their own operations but also play a crucial role in building a more sustainable and resilient food system for everyone.</p>
     </div>
